# homeverse

./: .env.example  .env.postgresql  .gitignore  ACTIVITY_TRACKING_IMPLEMENTATION.md  AI_AND_HEATMAP_STATUS.md  API_DOCUMENTATION.md  APPLICATIONS_PORTAL_FIX.md  APPLICATION_APPROVAL_FIX.md  APPLICATION_SYSTEM_FIX_SUMMARY.md  AUTHENTICATION_FIX.md  AUTOMATED_TESTING_SETUP.md  AUTO_DEPLOYMENT_MONITORING.md  BACKEND_STATUS.md  BACKUP_DISASTER_RECOVERY_PLAN.md  BETA_LAUNCH_PLAN.md  BETA_LAUNCH_ROADMAP.md  BUILD_TEST_REPORT.md  BUYER_APPLICANT_FIX.md  CLAUDE.md  CLEANUP_AND_SETUP_SUMMARY.md  CLEANUP_PHASE1_SUMMARY.md  CLEANUP_PLAN.md  CODEBASE_ANALYSIS_REPORT.md  CODEBASE_CLEANUP_PLAN.md  CODEBASE_SUMMARY.md  COMPREHENSIVE_APPLICATION_ANALYSIS.md  COMPREHENSIVE_TESTING_PLAN.md  COMPREHENSIVE_TEST_REPORT.md  CURRENT_DEPLOYMENT_STATUS.md  CURRENT_STATUS.md  CURRENT_STATUS_SUMMARY.md  DATA_ISOLATION_EXPLAINED.md  DEBUGGING_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_ISSUES.md  DEPLOYMENT_PLAN_SUMMARY.md  DEPLOYMENT_READINESS_CHECKLIST.md  DEPLOYMENT_READY.md  (+364 more)
alembic/: env.py  script.py.mako
app/: __init__.py  config.py  main.py  main_postgresql.py  main_production.py  simple_production.py
db/: init_schema.py  schema_postgresql.sql
docker/: Dockerfile  docker-compose.yml  init-db.sql
docs_archive/: APPLICATIONS_LIST_FIX_SUMMARY.md  APPLICATION_FLOW_FIX.md  CLAUDE_UPDATED.md  DATABASE_MIGRATION_ROADMAP.md  DATABASE_MIGRATION_STRATEGY.md  FULL_SERVER_SIDE_MIGRATION_PLAN.md  MAP_FIX_SUMMARY.md  SUPABASE_FRONTEND_MIGRATION_PLAN.md  SUPABASE_MIGRATION_GUIDE.md  SUPABASE_MIGRATION_PLAN.md  fix_production_deployment.md  quick_frontend_fix.md  typescript_fixes_summary.md
frontend/: .env.example  .env.local.backup  .env.local.example  .env.production  .env.production.example  CURRENT_SECURITY_STATUS.md  PRODUCTION_READINESS_REPORT.md  REQUIRED_ENV_VARS.md  SECURITY_ACTION_PLAN.md  SECURITY_AUDIT_REPORT.md  SECURITY_COMPLIANCE_AUDIT.md  SECURITY_REMEDIATION_PLAN.md  SERVER_ACTIONS_SUMMARY.md  SUPABASE_JOIN_QUERIES.md  check_applicants_columns.py  check_projects_schema.py  check_supabase_schema.py  create_applicants_schema.sql  list_supabase_tables.py  next.config.js  package-lock.json  package.json  playwright.config.debug.ts  playwright.config.ts  query_actual_schema.py  remove-console-logs.js  supabase_schema_fix.sql  tailwind.config.ts  test-puppeteer.js  test_corrected_schema.py  test_deployed_pages.py  test_supabase_local.py  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
ops/: fly.toml
scripts/: dev-loop.sh  run-comprehensive-tests.sh  start-local-dev.sh  test-and-fix.sh
sql_backup/: add_preferences_column.sql  create_admin_user.sql  create_applications_table.sql  (+12 more)
(+303 files in other folders)
